# Lab-C

./: .gitignore  CMakeLists.txt  GuessTheNumber  Operations.c  ReadMe.md  SumOf3Numbers.c  main.c  main.md
bash/: run_test.sh
exercises/: Operations.c  SumOf3Numbers.c  multiplicationTable.c
exercises/arrayDeleteDuplicate/: arrayDeleteDuplicate.c  arrayDeleteDuplicate.h
exercises/arrayIntersection/: arrayIntersection.c  arrayIntersection.h
exercises/arrayNumberFrequency/: arrayNumberFrequency.c  arrayNumberFrequency.h
exercises/arrayRandom/: arrayRandom.c  arrayRandom.h
exercises/arraySplit/: arraySplit.c  arraySplit.h
exercises/binaryAnd/: binaryAnd.c  binaryAnd.h
exercises/binaryEven/: binaryEven.c  binaryEven.h
exercises/binaryOperators/: binaryOperators.c  binaryOperators.h
exercises/bitShift/: bitShift.c  bitShift.h
exercises/guessTheNumber/: guessTheNumber.c  guessTheNumber.h
exercises/multiplicationTable/: multiplicationTable.c  multiplicationTable.h
exercises/oddAndEven/: oddAndEven.c  oddAndEven.h
exercises/operations/: operations.c  operations.h
helpers/: exercisesMap.c  exercisesMap.h  helpers.c  helpers.h
tests/: tests.c
theory/pointers/: pointers.c  pointers.h  pointers.md
utils/: exercisesMap.c  exercisesMap.h  helpers.c  helpers.h
utils/helpers/: helpers.c  helpers.h  helpersTests.h
